# logintc-pam

./: CMakeLists.txt  README.md  configure.ac
examples/: logintctest.c
src/: Makefile.am  pam_logintc.c
